--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             </div>
         </nav>
     </header>
-    <div class="container" style="background-color: olive;">
+    <div class="container" style="background-color: lavender;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
